Nutch Change Log

Release 2.2 - Current Development

* NUTCH-1243 Junit jar removed from lib (lewismc)

* NUTCH-1249 and NUTCH-1275 : Resolve all issues flagged up by adding javac -Xlint argument (tejasp)

* NUTCH-1513 Support Robots.txt for Ftp urls (tejasp)

* NUTCH-1053 Parsing of RSS feeds fails (tejasp)

* NUTCH-1563 FetchSchedule#getFields is never used by GeneratorJob (Feng)

* NUTCH-1573 Upgrade to most recent JUnit 4.x to improve test flexibility (lewismc)

* Added crawler-commons dependency in pom.xml (tejasp)

* NUTCH-956 solrindex issues: add field tld to Solr schema (Alexis via lewismc, snagel)

* NUTCH-1277 Fix [fallthrough] javac warnings (tejasp)

* NUTCH-1514 Phase out the deprecated configuration properties (if possible) (tejasp)

* NUTCH-1273 Fix [deprecation] javac warnings (lewsimc + tejasp)

* NUTCH-1031 Delegate parsing of robots.txt to crawler-commons (tejasp)

* NUTCH-346 Improve readability of logs/hadoop.log (Renaud Richardet via tejasp)

* NUTCH-1501 Harmonize behavior of parsechecker and indexchecker (snagel + lewismc)

* NUTCH-1551 Improve WebTableReader field order and display batchId (lewismc)

* NUTCH-1552 possibility of a NPE in index-more plugin (kaveh minooie via lewismc)

* NUTCH-1547 BasicIndexingFilter - Problem to index full title (Feng)

* NUTCH-1389 parsechecker and indexchecker to report truncated content (snagel)

* NUTCH-1419 parsechecker and indexchecker to report protocol status (snagel via lewismc)

* NUTCH-1038 Port IndexingFiltersChecker to 2.0 (snagel via lewismc)

* NUTCH-1532 Replace 'segment' mapping field with batchId (patches v2 + v3) (Feng +via lewismc)

* NUTCH-1533 Implement getPrevModifiedTime(), setPrevModifiedTime(), getBatchId() and setBatchId() accessors in o.a.n.storage.WebPage (Feng via lewismc)

* NUTCH-XX fix Elastic Search Ivy configuration (Binoy d via lewismc) 

* NUTCH-1542 "adddays" param for generator not present in 2.x (tejasp)
