@@ -99,23 +99,28 @@
     <!--================-->
     <!-- Gora artifacts -->
     <!--================-->
-    <dependency org="org.apache.gora" name="gora-core" rev="0.2.1" conf="*->compile"/>
+    <dependency org="org.apache.gora" name="gora-core" rev="0.3" conf="*->default"/>
+    <!-- Uncomment this to use SQL as Gora backend. It should be noted that the 
+    gora-sql 0.1.1-incubating artifact is NOT compatable with gora-core 0.3. Users should 
+    downgrade to gora-core 0.2.1 in order to use SQL as a backend. -->
+    <!--
     <dependency org="org.apache.gora" name="gora-sql" rev="0.1.1-incubating" conf="*->default" />
+    -->
     <!-- Uncomment this to use MySQL as database with SQL as Gora store. -->
     <!-- 
     <dependency org="mysql" name="mysql-connector-java" rev="5.1.18" conf="*->default"/> 
     -->
     <!-- Uncomment this to use HBase as Gora backend. -->
     <!-- 
-    <dependency org="org.apache.gora" name="gora-hbase" rev="0.2.1" conf="*->default" />
+    <dependency org="org.apache.gora" name="gora-hbase" rev="0.3" conf="*->default" />
     -->
     <!-- Uncomment this to use Accumulo as Gora backend. -->
     <!-- 
-    <dependency org="org.apache.gora" name="gora-accumulo" rev="0.2.1" conf="*->default" />
+    <dependency org="org.apache.gora" name="gora-accumulo" rev="0.3" conf="*->default" />
     -->
     <!-- Uncomment this to use Cassandra as Gora backend. -->
     <!-- 
-    <dependency org="org.apache.gora" name="gora-cassandra" rev="0.2" conf="*->default" />
+    <dependency org="org.apache.gora" name="gora-cassandra" rev="0.3" conf="*->default" />
     -->
 
     <!--global exclusion -->
