@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.2 - Current Development
 
+* NUTCH-1569 Upgrade 2.x to Gora 0.3 (lewismc)
+
 * NUTCH-1243 Junit jar removed from lib (lewismc)
 
 * NUTCH-1249 and NUTCH-1275 : Resolve all issues flagged up by adding javac -Xlint argument (tejasp)
